# fixed_string

./: CMakeLists.txt  README.md
include/mtp/: fixed_string.hpp
module/: fixed_string.cppm
test/: CMakeLists.txt  fixed_string_test.cpp
